Add "Read More" sections for various products with descriptions and toggle functionality

--- a/aluminium-products.html
+++ b/aluminium-products.html
@@ -246,6 +246,19 @@
     </section> 
     <!-- FAQ End -->
 
+    <!-- Products Read More Start -->
+    <section class="read-more-section">
+        <h4 class="read-more-title">Read More About Aluminium Conductors</h4>
+        <div class="read-more-content">
+            <p>Aluminium Conductors from Group Nirmal are engineered for high-efficiency power distribution with minimal energy loss. Used in overhead lines, substations, and grid infrastructure, these conductors provide excellent conductivity and mechanical strength at a fraction of the weight of copper. They are corrosion-resistant, cost-effective, and easy to install—making them ideal for long-span transmission. Manufactured under strict quality control, these conductors meet national and international standards.</p>
+            <div id="extraContent" class="extra-content">
+                <p>Group Nirmal’s range includes AAC, AAAC, and ACSR types to suit diverse project needs. For energy-efficient and scalable power solutions, trust Group Nirmal’s aluminium conductors.</p>
+            </div>
+            <button onclick="toggleReadMore()" id="readMoreBtn" class="read-more-btn">READ MORE</button>
+        </div>
+    </section>
+    <!-- Products Read More End -->
+
     <!-- Contact Us Start -->
     <section class="contact-us">
         <div class="contact-us-content">
