--- a/black-wires.html
+++ b/black-wires.html
@@ -254,6 +254,19 @@
     </section> 
     <!-- FAQ End -->
 
+    <!-- Products Read More Start -->
+    <section class="read-more-section">
+        <h4 class="read-more-title">Read More About Black Wires</h4>
+        <div class="read-more-content">
+            <p>Black wires from Group Nirmal are engineered for high performance in demanding industrial and infrastructure projects. These wires feature a durable black coating that provides enhanced resistance to corrosion, abrasion, and extreme temperatures. Whether used in electrical systems, construction reinforcements, or machinery setups, they deliver excellent conductivity and long-term reliability. Their consistent diameter and flexibility make them easy to handle and install, even in complex layouts.</p>
+            <div id="extraContent" class="extra-content">
+                <p>Group Nirmal ensures every batch meets strict quality standards, offering you safe and dependable wiring solutions that hold up in harsh environments. Trusted by contractors, engineers, and infrastructure developers, these black wires combine strength, safety, and efficiency in every strand. When your project demands resilience and performance without compromise, this is the wire that delivers.</p>
+            </div>
+            <button onclick="toggleReadMore()" id="readMoreBtn" class="read-more-btn">READ MORE</button>
+        </div>
+    </section>
+    <!-- Products Read More End -->
+
     <!-- Contact Us Start -->
     <section class="contact-us">
         <div class="contact-us-content">
