--- a/cables.html
+++ b/cables.html
@@ -230,6 +230,19 @@
     </section> 
     <!-- FAQ End -->
 
+    <!-- Products Read More Start -->
+    <section class="read-more-section">
+        <h4 class="read-more-title">Read More About Cables</h4>
+        <div class="read-more-content">
+            <p>Group Nirmal’s cables are built for performance, durability, and safety across a wide range of applications. Whether for residential buildings, heavy industry, or infrastructure projects, our cables offer superior insulation, fire resistance, and conductivity. Available in single-core, multi-core, armored, and flexible variants, they cater to specific voltage and load requirements.</p>
+            <div id="extraContent" class="extra-content">
+                <p>These cables are manufactured with premium-grade copper or aluminium and tested for mechanical and electrical integrity. Their robust sheathing protects against abrasion, chemicals, and environmental wear. With certifications and strict quality checks, Group Nirmal cables are a dependable choice for safe, high-performance wiring.</p>
+            </div>
+            <button onclick="toggleReadMore()" id="readMoreBtn" class="read-more-btn">READ MORE</button>
+        </div>
+    </section>
+    <!-- Products Read More End -->
+
     <!-- Contact Us Start -->
     <section class="contact-us">
         <div class="contact-us-content">
