--- a/fencing-wires.html
+++ b/fencing-wires.html
@@ -246,6 +246,19 @@
     </section> 
     <!-- FAQ End -->
 
+    <!-- Products Read More Start -->
+    <section class="read-more-section">
+        <h4 class="read-more-title">Read More About Fencing Wires</h4>
+        <div class="read-more-content">
+            <p>Group Nirmal’s fencing wires are crafted for durability and security in both rural and industrial environments. Designed for easy installation and long-term performance, these wires withstand weather, tension, and physical stress. Commonly used in agriculture, infrastructure projects, and property boundaries, they offer robust protection against intrusion while maintaining flexibility for various layouts.</p>
+            <div id="extraContent" class="extra-content">
+                <p>With uniform galvanization and high tensile strength, these wires provide dependable strength and low maintenance over time. They’re available in barbed, chain-link, and customized forms to suit different fencing needs. For reliable boundary solutions, choose Group Nirmal’s fencing wires.</p>
+            </div>
+            <button onclick="toggleReadMore()" id="readMoreBtn" class="read-more-btn">READ MORE</button>
+        </div>
+    </section>
+    <!-- Products Read More End -->
+
     <!-- Contact Us Start -->
     <section class="contact-us">
         <div class="contact-us-content">
