--- a/gi-wires.html
+++ b/gi-wires.html
@@ -238,6 +238,19 @@
     </section> 
     <!-- FAQ End -->
 
+    <!-- Products Read More Start -->
+    <section class="read-more-section">
+        <h4 class="read-more-title">Read More About GI Wires</h4>
+        <div class="read-more-content">
+            <p>Group Nirmal’s GI wires are hot-dip galvanized to deliver superior rust resistance and longevity. Ideal for fencing, baling, binding, and construction work, these wires are known for their high tensile strength and consistent thickness. Whether used in agricultural fencing or heavy-duty infrastructure, they maintain shape and performance under pressure.</p>
+            <div id="extraContent" class="extra-content">
+                <p>The zinc coating enhances weather resistance, ensuring they perform reliably in outdoor settings. Easy to handle and available in a range of gauges, these wires are trusted by builders and industrial clients alike. For applications where durability and resilience are key, GI wires from Group Nirmal offer proven reliability and value.</p>
+            </div>
+            <button onclick="toggleReadMore()" id="readMoreBtn" class="read-more-btn">READ MORE</button>
+        </div>
+    </section>
+    <!-- Products Read More End -->
+
     <!-- Contact Us Start -->
     <section class="contact-us">
         <div class="contact-us-content">
