--- a/niznal.html
+++ b/niznal.html
@@ -238,6 +238,19 @@
     </section> 
     <!-- FAQ End -->
 
+    <!-- Products Read More Start -->
+    <section class="read-more-section">
+        <h4 class="read-more-title">Read More About Niznal</h4>
+        <div class="read-more-content">
+            <p>Niznal wires by Group Nirmal are specialized for applications demanding high electrical conductivity and thermal resistance. Commonly used in transformer windings, power transmission, and coil applications, they offer precise dimensional control and uniform surface finish. These wires exhibit excellent strength-to-weight ratios and corrosion resistance, even in challenging environments.</p>
+            <div id="extraContent" class="extra-content">
+                <p>Manufactured with an aluminium-nickel-zinc alloy blend, Niznal combines the benefits of light weight and strong current carrying capacity. Whether used in utilities, heavy machinery, or control panels, Niznal wires provide safe, energy-efficient performance.</p>
+            </div>
+            <button onclick="toggleReadMore()" id="readMoreBtn" class="read-more-btn">READ MORE</button>
+        </div>
+    </section>
+    <!-- Products Read More End -->
+
     <!-- Contact Us Start -->
     <section class="contact-us">
         <div class="contact-us-content">
