--- a/products-2.html
+++ b/products-2.html
@@ -315,6 +315,20 @@
     </section> 
     <!-- Products Tabbing End -->
 
+    <!-- Products Read More Start -->
+    <section class="read-more-section">
+        <h4 class="read-more-title">Heading</h4>
+        <div class="read-more-content">
+            <p>Lorem ipsum dolor sit amet consectetur. Ipsum nisl fermentum id dui vitae cras amet. Faucibus ut orci eget amet eget tristique. Egestas eget placerat non vitae. Enim viverra dictum sodales eget sed.</p>
+            <div id="extraContent" class="extra-content">
+                <p>Maecenas cras quis facilisis a scelerisque massa bibendum. Scelerisque arcu consectetur porttitor quisque nisi commodo sed. Donec ornare maecenas id lobortis at. Condimentum cursus faucibus pulvinar diam aliquam aliquam facilisis ut. Maecenas ac amet in augue amet augue.</p>
+                <p>Quis sem at dolor egestas. Bibendum eleifend malesuada nunc dolor accumsan suscipit porttitor. Ut in sit bibendum ante amet vel non. Amet tristique viverra curabitur dignissim tincidunt tellus. Scelerisque neque dictum eget risus adipiscing mattis egestas ac. Mauris quam at aliquet et nec vestibulum. Erat id nisl est varius arcu tincidunt fringilla arcu.</p>
+            </div>
+            <button onclick="toggleReadMore()" id="readMoreBtn" class="read-more-btn">READ MORE</button>
+        </div>
+    </section>
+    <!-- Products Read More End -->
+
     <!-- Contact Us Start -->
     <section class="contact-us">
         <div class="contact-us-content">
