--- a/rolled-products.html
+++ b/rolled-products.html
@@ -238,6 +238,19 @@
     </section> 
     <!-- FAQ End -->
 
+    <!-- Products Read More Start -->
+    <section class="read-more-section">
+        <h4 class="read-more-title">Read More About rolled products</h4>
+        <div class="read-more-content">
+            <p>Group Nirmal’s rolled products include cold-rolled and hot-rolled steel and aluminium solutions designed for structural and commercial uses. These products are widely used in automotive panels, electrical appliances, construction frames, and packaging applications. Known for dimensional precision, surface quality, and excellent formability, our rolled sheets and coils meet global standards for strength and performance.</p>
+            <div id="extraContent" class="extra-content">
+                <p>Available in various thicknesses and finishes, they are ideal for both fabrication and manufacturing processes. With strong logistics and consistent supply, Group Nirmal ensures product availability and technical support for clients across industries.</p>
+            </div>
+            <button onclick="toggleReadMore()" id="readMoreBtn" class="read-more-btn">READ MORE</button>
+        </div>
+    </section>
+    <!-- Products Read More End -->
+
     <!-- Contact Us Start -->
     <section class="contact-us">
         <div class="contact-us-content">
