--- a/welding-electrodes.html
+++ b/welding-electrodes.html
@@ -214,6 +214,19 @@
     </section> 
     <!-- FAQ End -->
 
+    <!-- Products Read More Start -->
+    <section class="read-more-section">
+        <h4 class="read-more-title">Read More About welding solutions</h4>
+        <div class="read-more-content">
+            <p>Group Nirmal offers a wide selection of welding electrodes and wires tailored for various industrial welding needs. These include mild steel electrodes, low hydrogen rods, stainless steel wires, and flux-cored solutions that ensure deep weld penetration and minimal spatter. Our welding consumables are used in shipbuilding, infrastructure, fabrication, and repair works. They offer strong arc stability, easy slag removal, and consistent mechanical properties.</p>
+            <div id="extraContent" class="extra-content">
+                <p>Whether you're tackling structural joints, pipelines, or machinery fabrication, our welding products deliver reliable bonding and efficiency. Backed by stringent quality control, Group Nirmal’s welding range supports critical welding operations with precision and confidence.</p>
+            </div>
+            <button onclick="toggleReadMore()" id="readMoreBtn" class="read-more-btn">READ MORE</button>
+        </div>
+    </section>
+    <!-- Products Read More End -->
+
     <!-- Contact Us Start -->
     <section class="contact-us">
         <div class="contact-us-content">
