--- a/zinc-wire-&-products.html
+++ b/zinc-wire-&-products.html
@@ -238,6 +238,19 @@
     </section> 
     <!-- FAQ End -->
 
+    <!-- Products Read More Start -->
+    <section class="read-more-section">
+        <h4 class="read-more-title">Read More About zinc wire & products</h4>
+        <div class="read-more-content">
+            <p>Group Nirmal offers a wide range of zinc wires and allied products, ideal for galvanizing, thermal spraying, and corrosion protection. These wires are widely used in steel structures, marine applications, and automotive parts to create long-lasting protective coatings. Our zinc wires ensure uniform flow and coating, with excellent adhesion properties. Precision-drawn and quality-tested, they are suitable for manual and automated processes.</p>
+            <div id="extraContent" class="extra-content">
+                <p>The zinc alloy formulation enhances wear resistance and minimizes oxidation in extreme conditions. Whether you're looking to extend product life or meet anti-corrosion compliance, Group Nirmal's zinc solutions deliver reliability and value.</p>
+            </div>
+            <button onclick="toggleReadMore()" id="readMoreBtn" class="read-more-btn">READ MORE</button>
+        </div>
+    </section>
+    <!-- Products Read More End -->
+
     <!-- Contact Us Start -->
     <section class="contact-us">
         <div class="contact-us-content">
