--- a/high-carbon-wire.html
+++ b/high-carbon-wire.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>High Carbon Wire - Nirmal</title>
+    <title>High Carbon Wire | Group Nirmal Engineering</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
     <link rel="canonical" href="https://groupnirmal.com/high-carbon-wire.html">
+    <!-- Link Meta Title -->
+    <meta name="title" content="High Carbon Wire | Group Nirmal Engineering">
+    <!-- Link Meta Description -->
+    <meta name="description" content="Explore high carbon wire from Group Nirmal engineered for high strength and durability in automotive, construction, and industrial applications.">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
