--- a/LT-XLPE-insulated-power-cable.html
+++ b/LT-XLPE-insulated-power-cable.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>LT XLPE Insulated Power Cable - Nirmal</title>
+    <title>Lt Xlpe Insulated Power Cable by Group Nirmal | Reliable Performance</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
     <link rel="canonical" href="https://groupnirmal.com/lt-xlpe-insulated-power-cable.html">
+    <!-- Link Meta Title -->
+    <meta name="title" content="Lt Xlpe Insulated Power Cable by Group Nirmal | Reliable Performance">
+    <!-- Link Meta Description -->
+    <meta name="description" content="Lt Xlpe Insulated Power Cable from Group Nirmal ensures safety, insulation, and long life. Ideal for power distribution and low-tension electrical networks.">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
