--- a/Nirmal-6013.html
+++ b/Nirmal-6013.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Nirmal 6013 - Nirmal</title>
+    <title>Nirmal 6013 Welding Electrodes by Group Nirmal | Reliable Performance</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
     <link rel="canonical" href="https://groupnirmal.com/nirmal-6013.html">
+    <!-- Link Meta Title -->
+    <meta name="title" content="Nirmal 6013 Welding Electrodes by Group Nirmal | Reliable Performance">
+    <!-- Link Meta Description -->
+    <meta name="description" content="Nirmal 6013 Welding Electrodes ensures strong welds and low spatter. Suitable for general welding tasks across multiple fabrication environments.">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
