--- a/al-59.html
+++ b/al-59.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AL 59 Aluminium Conductor - Nirmal</title>
+    <title>Al 59 Aluminium Conductor by Group Nirmal | Reliable Performance</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
     <link rel="canonical" href="https://groupnirmal.com/al-59.html">
+    <!-- Link Meta Title -->
+    <meta name="title" content="Al 59 Aluminium Conductor by Group Nirmal | Reliable Performance">
+    <!-- Link Meta Description -->
+    <meta name="description" content="Al 59 Aluminium Conductor ensures efficient power transmission. Group Nirmal offers corrosion-resistant and high-strength conductors for reliable connectivity.">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
