--- a/aluminium-ingots.html
+++ b/aluminium-ingots.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Aluminium Ingots - Nirmal</title>
+    <title>Aluminium Ingots by Group Nirmal | Reliable Performance</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
     <link rel="canonical" href="https://groupnirmal.com/aluminium-ingots.html">
+    <!-- Link Meta Title -->
+    <meta name="title" content="Aluminium Ingots by Group Nirmal | Reliable Performance">
+    <!-- Link Meta Description -->
+    <meta name="description" content="Aluminium Ingots refined for superior purity and strength. Suitable for manufacturing, casting, and high-performance industrial applications.">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
