--- a/pc-wire.html
+++ b/pc-wire.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>PC Wire - Nirmal</title>
+    <title>PC Wire | Prestressed Concrete Wire Supply</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
     <link rel="canonical" href="https://groupnirmal.com/pc-wire.html">
+    <!-- Link Meta Title -->
+    <meta name="title" content="PC Wire | Prestressed Concrete Wire Supply">
+    <!-- Link Meta Description -->
+    <meta name="description" content="Group Nirmal offers PC wire designed for prestressed concrete application delivering superior bonding, high tensile strength, and stability.">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
