--- a/ribbed-wire.html
+++ b/ribbed-wire.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Ribbed Wire - Nirmal</title>
+    <title>Ribbed Wire | Reinforcement Steel Wire</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
     <link rel="canonical" href="https://groupnirmal.com/ribbed-wire.html">
+    <!-- Link Meta Title -->
+    <meta name="title" content="Ribbed Wire | Reinforcement Steel Wire">
+    <!-- Link Meta Description -->
+    <meta name="description" content="Ribbed wire from Group Nirmal ensures better grip in concrete reinforcements enhancing bonding strength and structural reliability.">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
