--- a/tricon.html
+++ b/tricon.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Tricon (High Strength Deformed Steel Bars) - Nirmal</title>
+    <title>Tricon Wire | 3-Layer Coated Wire Innovation</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
     <link rel="canonical" href="https://groupnirmal.com/tricon.html">
+    <!-- Link Meta Title -->
+    <meta name="title" content="Tricon Wire | 3-Layer Coated Wire Innovation">
+    <!-- Link Meta Description -->
+    <meta name="description" content="Tricon wire by Group Nirmal features triple-layer coating technology offering advanced corrosion resistance for agricultural and industrial use.">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
