--- a/zinc-rods.html
+++ b/zinc-rods.html
@@ -4,10 +4,14 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Zinc Rods - Nirmal</title>
+    <title>Zinc Rods by Group Nirmal | Reliable Performance</title>
     <link rel="shortcut icon" href="assets/images/logo/fav.png" type="image/x-icon">
     <!-- Link to Canonical -->
     <link rel="canonical" href="https://groupnirmal.com/zinc-rods.html">
+    <!-- Link Meta Title -->
+    <meta name="title" content="Zinc Rods by Group Nirmal | Reliable Performance">
+    <!-- Link Meta Description -->
+    <meta name="description" content="Zinc Rods available at Group Nirmal for trusted engineering performance in industrial and construction-grade applications.">
     <!-- Bootstrap CSS Link -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
