Refactor HTML structure for zinc rods and zinc wire pages: - Changed headings from <h1> to <h2>, <h3>, <h4>, <h5>, and <h6> for better semantic structure. - Replaced <h2> tags in feature cards, application sections, quality assurance, after-sale services, and sets apart sections with <span> tags for improved styling. - Updated FAQ section headers from <h2> to <h6> for consistency and better hierarchy.

--- a/aluminium-alloy-conductors.html
+++ b/aluminium-alloy-conductors.html
@@ -128,14 +128,14 @@
 
     <!-- Features Start -->
     <section class="features">
-        <h1 data-aos="zoom-in" data-aos-duration="1000">FEATURES</h1>
+        <h2 data-aos="zoom-in" data-aos-duration="1000">FEATURES</h2>
         <div class="feature-row">
             <!-- Card 1 -->
             <div class="feature-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
                     <img src="assets/images/product-internal/feature-card-1.png" alt="icon" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
-                <h2>Material</h2>
+                <span>Material</span>
                 <p>AAC Conductors are manufactured using ec grade aluminium.</p>
             </div>
             <!-- Card 2 -->
@@ -143,7 +143,7 @@
                 <div class="card-img">
                     <img src="assets/images/product-internal/feature-card-2.png" alt="icon" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
-                <h2>Standards</h2>
+                <span>Standards</span>
                 <p>AAC Conductors conform to IS 198 (IV)</p>
             </div>
             <!-- Card 3 -->
@@ -151,7 +151,7 @@
                 <div class="card-img">
                     <img src="assets/images/product-internal/feature-card-3.png" alt="icon" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
-                <h2>Strand Configuration</h2>
+                <span>Strand Configuration</span>
                 <p>AAC Conductors are available in various strand configurations which include 7,19,37,61</p>
             </div>
             <!-- Card 4 -->
@@ -159,7 +159,7 @@
                 <div class="card-img">
                     <img src="assets/images/product-internal/feature-card-5.png" alt="icon" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
-                <h2>Packaging</h2>
+                <span>Packaging</span>
                 <p>AAC conductors are available in Drums.</p>
             </div>
         </div>
@@ -168,13 +168,13 @@
 
     <!-- Applications Start -->
     <section class="apps">
-        <h1 data-aos="zoom-in" data-aos-duration="1000">APPLICATIONS</h1>
+        <h3 data-aos="zoom-in" data-aos-duration="1000">APPLICATIONS</h3>
         <div class="apps-row">
             <!-- Card 1 -->
             <div class="apps-card" data-aos="fade" data-aos-duration="1000">
                 <img src="assets/images/application-images/Aluminium/AAC/Overhead transmission lines.png" alt="img" loading="lazy" width="100" height="150">
                 <div class="blue-layer">
-                    <h4>Overhead Transmission Lines</h4>
+                    <span>Overhead Transmission Lines</span>
                     <p>AAC conductors are used in overhead power lines that distribute electricity within cities and towns, supplying power to residential, commercial, and industrial area</p>
                 </div>
             </div>
@@ -182,7 +182,7 @@
             <div class="apps-card" data-aos="fade" data-aos-duration="1000">
                 <img src="assets/images/application-images/Aluminium/AAC/Railway electrification.jpg.png" alt="img" loading="lazy" width="100" height="150">
                 <div class="blue-layer">
-                    <h4>Railway Electrification</h4>
+                    <span>Railway Electrification</span>
                     <p>AAC conductors are used in the overhead catenary system that supplies heavy power loads to electric locomotives and trains.</p>
                 </div>
             </div>
@@ -190,7 +190,7 @@
             <div class="apps-card" data-aos="fade" data-aos-duration="1000">
                 <img src="assets/images/application-images/Aluminium/AAC/commercial and industrial.png" alt="img" loading="lazy" width="100" height="150">
                 <div class="blue-layer">
-                    <h4>Commercial and Industrial Power Distribution</h4>
+                    <span>Commercial and Industrial Power Distribution</span>
                     <p>AAC conductors are used to distribute electricity to commercial and industrial establishments like shopping malls, offices, manufacturing plants, etc.</p>
                 </div>
             </div>
@@ -201,7 +201,7 @@
 
     <!-- Quality Start -->
     <section class="quality">
-        <h1 data-aos="zoom-in" data-aos-duration="1000">QUALITY ASSURANCE</h1>
+        <h4 data-aos="zoom-in" data-aos-duration="1000">QUALITY ASSURANCE</h4>
         <p data-aos="fade" data-aos-duration="1000">At every stage of production, we prioritise quality to deliver products and services that meet or exceed industry standards. Our commitment to quality assurance includes-:</p>
         <div class="quality-card-row">
             <!-- Card 1 -->
@@ -210,7 +210,7 @@
                     <img src="assets/images/product-internal/quality-1.png" alt="card-img" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
                 <div class="quality-card-body">
-                    <h2>Raw Material Inspection</h2>
+                    <span>Raw Material Inspection</span>
                     <p>Raw materials are thoroughly inspected to ensure quality is maintained.</p>
                 </div>
             </div>
@@ -220,7 +220,7 @@
                     <img src="assets/images/product-internal/quality-2.png" alt="card-img" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
                 <div class="quality-card-body">
-                    <h2>In-Process Testing</h2>
+                    <span>In-Process Testing</span>
                     <p>Regular testing during the manufacturing process to verify adherence to specifications </p>
                 </div>
             </div>
@@ -230,7 +230,7 @@
                     <img src="assets/images/product-internal/quality-3.png" alt="card-img" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
                 <div class="quality-card-body">
-                    <h2>Final Inspection</h2>
+                    <span>Final Inspection</span>
                     <p>Comprehensive quality checks on finished products, including dimensions, surface finish, and mechanical properties.</p>
                 </div>
             </div>
@@ -240,7 +240,7 @@
                     <img src="assets/images/product-internal/quality-4.png" alt="card-img" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
                 <div class="quality-card-body">
-                    <h2>Certifications</h2>
+                    <span>Certifications</span>
                     <p>Our products are certified in terms of quality and performance.</p>
                 </div>
             </div>
@@ -254,7 +254,7 @@
     <!-- After Sale Start -->
     <section class="after-sale">
         <div class="after-sale-left">
-            <h1 data-aos="fade-right" data-aos-duration="1000">AFTER-SALE SERVICES</h1>
+            <h5 data-aos="fade-right" data-aos-duration="1000">AFTER-SALE SERVICES</h5>
             <p data-aos="fade" data-aos-duration="1000">We are committed towards providing dedicated customer support at every stage of the purchase journey</p>
             <div class="after-sale-cards-box">
                 <!-- Card 1 -->
@@ -263,7 +263,7 @@
                         <img src="assets/images/product-internal/after-sales-card-1.png" alt="card-image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                     </div>
                     <div class="card-right">
-                        <h2>Accountability</h2>
+                        <span>Accountability</span>
                         <p>We assume full responsibility for any quality deficiencies and commit to prompt resolution.</p>
                     </div>
                 </div>
@@ -273,7 +273,7 @@
                         <img src="assets/images/product-internal/after-sales-card-2.png" alt="card-image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                     </div>
                     <div class="card-right">
-                        <h2>Customer Support</h2>
+                        <span>Customer Support</span>
                         <p>Our dedicated support team is available to address any inquiries or concerns.</p>
                     </div>
                 </div>
@@ -288,7 +288,7 @@
 
     <!-- Sets Apart Start -->
     <section class="sets-apart">
-        <h1 data-aos="zoom-in" data-aos-duration="1000">What Sets Us Apart</h1>
+        <h6 data-aos="zoom-in" data-aos-duration="1000">What Sets Us Apart</h6>
         <p data-aos="fade" data-aos-duration="1000">At Group Nirmal, we go beyond manufacturing - we create dependable solutions that power progress and build lasting partnerships.</p>
         <div class="sets-apart-card-row">
             <!-- Card 1 -->
@@ -296,7 +296,7 @@
                 <div class="img-box" data-aos="zoom-in" data-aos-duration="1000">
                     <img src="assets/images/globe.png" alt="image" loading="lazy" width="40" height="40">
                 </div>
-                <h2>World-Class Manufacturing</h2>
+                <span>World-Class Manufacturing</span>
                 <p>State-of-the-art facilities producing high-quality wires, cables, and steel products with precision and consistency.</p>
             </div>
             <!-- Card 2 -->
@@ -304,7 +304,7 @@
                 <div class="img-box" data-aos="zoom-in" data-aos-duration="1000">
                     <img src="assets/images/globe.png" alt="image" loading="lazy" width="40" height="40">
                 </div>
-                <h2>Proven Industry Expertise</h2>
+                <span>Proven Industry Expertise</span>
                 <p>Over 50+ years of experience delivering trusted solutions across infrastructure, power, & industrial sectors.</p>
             </div>
             <!-- Card 3 -->
@@ -312,7 +312,7 @@
                 <div class="img-box" data-aos="zoom-in" data-aos-duration="1000">
                     <img src="assets/images/globe.png" alt="image" loading="lazy" width="40" height="40">
                 </div>
-                <h2>Commitment To Quality & Sustainability</h2>
+                <span>Commitment To Quality & Sustainability</span>
                 <p>Strict quality control, certified processes, and eco-conscious practices that meet global standards.</p>
             </div>
             <!-- Card 4 -->
@@ -320,7 +320,7 @@
                 <div class="img-box" data-aos="zoom-in" data-aos-duration="1000">
                     <img src="assets/images/globe.png" alt="image" loading="lazy" width="40" height="40">
                 </div>
-                <h2>Global Reach, Local Strength</h2>
+                <span>Global Reach, Local Strength</span>
                 <p>Supplying to 40+ countries with a strong domestic footprint across 5 Indian states.</p>
             </div>
         </div>
@@ -330,7 +330,7 @@
     <!-- Get in Touch Start -->
     <section class="get-in-touch">
         <div class="get-in-touch-form" data-aos="fade-up" data-aos-duration="1000">
-            <h1>Get In Touch</h1>
+            <h6>Get In Touch</h6>
             <form action="" data-lenis-prevent>
                 <label for="name">Full Name <span>*</span></label>
                 <input type="text" id="name" name="name" required>
@@ -349,16 +349,16 @@
 
     <!-- FAQ Start -->
     <section class="faq">
-        <h1 data-aos="zoom-in" data-aos-duration="1000">Frequently Asked Questions</h1>
+        <h6 data-aos="zoom-in" data-aos-duration="1000">Frequently Asked Questions</h6>
         <p data-aos="fade" data-aos-duration="1000">Got questions? We've covered the essentials here.</p>
 
         <div class="accordion" id="faqAccordion" data-aos="fade" data-aos-duration="1000">
             <div class="accordion-item">
-                <h2 class="accordion-header">
+                <h6 class="accordion-header">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     What is the minimum order quantity (MOQ) for your products?
                 </button>
-                </h2>
+                </h6>
                 <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
                 <div class="accordion-body">
                     The <b>minimum order quantity</b> for the majority of our products is <b>5 tons</b>. However, for our retail segment, there is no MOQ, allowing customers to purchase products directly from our channel partners based on their specific requirements.
@@ -366,11 +366,11 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <h2 class="accordion-header">
+                <h6 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                     What specific tests are performed during in-process testing and final inspection to ensure consistent mechanical properties for the end product?
                 </button>
-                </h2>
+                </h6>
                 <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                 <div class="accordion-body">
                     To ensure consistent mechanical properties in our products, we perform several key tests during both in-process testing and final inspection. These include assessing <b>ultimate tensile strength</b>, <b>elongation</b>, and meticulously measuring <b>carbon content</b>.
@@ -378,11 +378,11 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <h2 class="accordion-header">
+                <h6 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                     What are your typical lead times for delivery?
                 </button>
-                </h2>
+                </h6>
                 <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                 <div class="accordion-body">
                     Our typical lead times for domestic orders range from <b>7 to 10 days</b>, contingent on location and specific product requirements. For international orders, shipments generally take <b>1 to 2 months</b>, varying with destination and product specifications. 
@@ -390,11 +390,11 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <h2 class="accordion-header">
+                <h6 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                     Do you offer custom diameters, compositions, or packaging for your products to meet specific customer requirements?
                 </button>
-                </h2>
+                </h6>
                 <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                 <div class="accordion-body">
                     Yes, we offer <b>customization options</b> for product diameters, compositions, and packaging. These services are provided based on client needs and the quantity ordered.
@@ -402,11 +402,11 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <h2 class="accordion-header">
+                <h6 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                     What is your process for addressing quality discrepancies or rejections from customers after delivery?
                 </button>
-                </h2>
+                </h6>
                 <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                 <div class="accordion-body">
                     Our process for addressing quality discrepancies and rejections after delivery is as follows: <br><br>
@@ -416,11 +416,11 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <h2 class="accordion-header">
+                <h6 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
                     How do you ensure the purity of raw materials and prevent impurities from affecting final quality?
                 </button>
-                </h2>
+                </h6>
                 <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                 <div class="accordion-body">
                     To guarantee high quality, we source our raw materials exclusively from <b>certified suppliers</b> that meet industry standards. All incoming materials undergo a thorough inspection in our in-house testing laboratories to ensure adherence to these standards. Only materials that satisfy our stringent quality criteria are approved for production.
