--- a/MS-rounds.html
+++ b/MS-rounds.html
@@ -128,14 +128,14 @@
 
     <!-- Features Start -->
     <section class="features">
-        <h1 data-aos="zoom-in" data-aos-duration="1000">FEATURES</h1>
+        <h2 data-aos="zoom-in" data-aos-duration="1000">FEATURES</h2>
         <div class="feature-row five-feature-row">
             <!-- Card 1 -->
             <div class="feature-card" data-aos="fade" data-aos-duration="1000">
                 <div class="card-img">
                     <img src="assets/images/product-internal/feature-card-1.png" alt="icon" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
-                <h2>Material</h2>
+                <span>Material</span>
                 <p>MS Rounds are made using MS Billets.</p>
             </div>
             <!-- Card 2 -->
@@ -143,7 +143,7 @@
                 <div class="card-img">
                     <img src="assets/images/product-internal/feature-card-2.png" alt="icon" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
-                <h2>Size</h2>
+                <span>Size</span>
                 <p>MS Rounds are available in a vast range of sized from 24-80mm</p>
             </div>
             <!-- Card 3 -->
@@ -151,7 +151,7 @@
                 <div class="card-img">
                     <img src="assets/images/product-internal/feature-card-3.png" alt="icon" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
-                <h2>Standards</h2>
+                <span>Standards</span>
                 <p>MS Rounds conform to IS Standards and are also available in customer specifications.</p>
             </div>
         </div>
@@ -160,13 +160,13 @@
 
     <!-- Applications Start -->
     <section class="apps">
-        <h1 data-aos="zoom-in" data-aos-duration="1000">APPLICATIONS</h1>
+        <h3 data-aos="zoom-in" data-aos-duration="1000">APPLICATIONS</h3>
         <div class="apps-row">
             <!-- Card 1 -->
             <div class="apps-card" data-aos="fade" data-aos-duration="1000">
                 <img src="assets/images/application-images/Rolled/MS Rounds/Machinery.png" alt="img" loading="lazy" width="100" height="150">
                 <div class="blue-layer">
-                    <h4>Machinery Components</h4>
+                    <span>Machinery Components</span>
                     <p>MS Rounds are extensively used to manufacture various machine components such as shafts, spindles, axles, and gears. Their high strength-to-weight ratio and machinability make them ideal for these applications.</p>
                 </div>
             </div>
@@ -174,7 +174,7 @@
             <div class="apps-card" data-aos="fade" data-aos-duration="1000">
                 <img src="assets/images/application-images/Rolled/MS Rounds/Tool and die.jpg" alt="img" loading="lazy" width="100" height="150">
                 <div class="blue-layer">
-                    <h4>Tool and Die Making</h4>
+                    <span>Tool and Die Making</span>
                     <p>MS Rounds are used to create tools and dies for various manufacturing processes, including forging, stamping, and extrusion. Their durability and ability to withstand high pressures and temperatures make them suitable for these demanding applications.</p>
                 </div>
             </div>
@@ -182,7 +182,7 @@
             <div class="apps-card" data-aos="fade" data-aos-duration="1000">
                 <img src="assets/images/application-images/Rolled/MS Rounds/Precision engineering.webp" alt="img" loading="lazy" width="100" height="150">
                 <div class="blue-layer">
-                    <h4>Precision Engineering</h4>
+                    <span>Precision Engineering</span>
                     <p>MS Rounds are used in precision engineering applications, such as the manufacturing of jigs, fixtures, and gauges. Their high accuracy and dimensional stability make them suitable for these applications.</p>
                 </div>
             </div>
@@ -190,7 +190,7 @@
             <div class="apps-card" data-aos="fade" data-aos-duration="1000">
                 <img src="assets/images/application-images/Rolled/MS Rounds/Nut and bolt.png" alt="img" loading="lazy" width="100" height="150">
                 <div class="blue-layer">
-                    <h4>Nut and Bolt Making</h4>
+                    <span>Nut and Bolt Making</span>
                     <p>MS Rounds are the primary raw material for manufacturing nuts and bolts. They are cut into appropriate lengths and then threaded using specialised machines to create these essential fasteners.</p>
                 </div>
             </div>
@@ -198,7 +198,7 @@
             <div class="apps-card" data-aos="fade" data-aos-duration="1000">
                 <img src="assets/images/application-images/Rolled/MS Rounds/Railways.jpg" alt="img" loading="lazy" width="100" height="150">
                 <div class="blue-layer">
-                    <h4>Railway point and cross assemblies</h4>
+                    <span>Railway point and cross assemblies</span>
                     <p>MS Rounds are essential for railway point and cross assemblies. They are used to make key components like switchblades, stock rails, connecting rods, and clamps, ensuring smooth and safe train operations.
                         </p>
                 </div>
@@ -207,7 +207,7 @@
             <div class="apps-card" data-aos="fade" data-aos-duration="1000">
                 <img src="assets/images/application-images/Rolled/MS Rounds/Automobile.png" alt="img" loading="lazy" width="100" height="150">
                 <div class="blue-layer">
-                    <h4>Automobile manufacturing</h4>
+                    <span>Automobile manufacturing</span>
                     <p>MS Rounds are vital in the automotive industry, used to manufacture critical components like engine parts (connecting rods, camshafts), transmission components (gears, shafts), chassis components (frames, suspension parts), and structural body reinforcements. Their high strength-to-weight ratio and machinability make them ideal for these applications.</p>
                 </div>
             </div>
@@ -218,7 +218,7 @@
 
     <!-- Quality Start -->
     <section class="quality">
-        <h1 data-aos="zoom-in" data-aos-duration="1000">QUALITY ASSURANCE</h1>
+        <h4 data-aos="zoom-in" data-aos-duration="1000">QUALITY ASSURANCE</h4>
         <p data-aos="fade" data-aos-duration="1000">At every stage of production, we prioritise quality to deliver products and services that meet or exceed industry standards. Our commitment to quality assurance includes-:</p>
         <div class="quality-card-row">
             <!-- Card 1 -->
@@ -227,7 +227,7 @@
                     <img src="assets/images/product-internal/quality-1.png" alt="card-img" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
                 <div class="quality-card-body">
-                    <h2>Raw Material Inspection</h2>
+                    <span>Raw Material Inspection</span>
                     <p>Raw materials are thoroughly inspected to ensure quality is maintained.</p>
                 </div>
             </div>
@@ -237,7 +237,7 @@
                     <img src="assets/images/product-internal/quality-2.png" alt="card-img" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
                 <div class="quality-card-body">
-                    <h2>In-Process Testing</h2>
+                    <span>In-Process Testing</span>
                     <p>Regular testing during the manufacturing process to verify adherence to specifications </p>
                 </div>
             </div>
@@ -247,7 +247,7 @@
                     <img src="assets/images/product-internal/quality-3.png" alt="card-img" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
                 <div class="quality-card-body">
-                    <h2>Final Inspection</h2>
+                    <span>Final Inspection</span>
                     <p>Comprehensive quality checks on finished products, including dimensions, surface finish, and mechanical properties.</p>
                 </div>
             </div>
@@ -257,7 +257,7 @@
                     <img src="assets/images/product-internal/quality-4.png" alt="card-img" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                 </div>
                 <div class="quality-card-body">
-                    <h2>Certifications</h2>
+                    <span>Certifications</span>
                     <p>Our products are certified in terms of quality and performance.</p>
                 </div>
             </div>
@@ -271,7 +271,7 @@
     <!-- After Sale Start -->
     <section class="after-sale">
         <div class="after-sale-left">
-            <h1 data-aos="fade-right" data-aos-duration="1000">AFTER-SALE SERVICES</h1>
+            <h5 data-aos="fade-right" data-aos-duration="1000">AFTER-SALE SERVICES</h5>
             <p data-aos="fade" data-aos-duration="1000">We are committed towards providing dedicated customer support at every stage of the purchase journey</p>
             <div class="after-sale-cards-box">
                 <!-- Card 1 -->
@@ -280,7 +280,7 @@
                         <img src="assets/images/product-internal/after-sales-card-1.png" alt="card-image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                     </div>
                     <div class="card-right">
-                        <h2>Accountability</h2>
+                        <span>Accountability</span>
                         <p>We assume full responsibility for any quality deficiencies and commit to prompt resolution.</p>
                     </div>
                 </div>
@@ -290,7 +290,7 @@
                         <img src="assets/images/product-internal/after-sales-card-2.png" alt="card-image" data-aos="zoom-in" data-aos-duration="1000" loading="lazy" width="40" height="40">
                     </div>
                     <div class="card-right">
-                        <h2>Customer Support</h2>
+                        <span>Customer Support</span>
                         <p>Our dedicated support team is available to address any inquiries or concerns.</p>
                     </div>
                 </div>
@@ -305,7 +305,7 @@
 
     <!-- Sets Apart Start -->
     <section class="sets-apart">
-        <h1 data-aos="zoom-in" data-aos-duration="1000">What Sets Us Apart</h1>
+        <h6 data-aos="zoom-in" data-aos-duration="1000">What Sets Us Apart</h6>
         <p data-aos="fade" data-aos-duration="1000">At Group Nirmal, we go beyond manufacturing - we create dependable solutions that power progress and build lasting partnerships.</p>
         <div class="sets-apart-card-row">
             <!-- Card 1 -->
@@ -313,7 +313,7 @@
                 <div class="img-box" data-aos="zoom-in" data-aos-duration="1000">
                     <img src="assets/images/globe.png" alt="image" loading="lazy" width="40" height="40">
                 </div>
-                <h2>World-Class Manufacturing</h2>
+                <span>World-Class Manufacturing</span>
                 <p>State-of-the-art facilities producing high-quality wires, cables, and steel products with precision and consistency.</p>
             </div>
             <!-- Card 2 -->
@@ -321,7 +321,7 @@
                 <div class="img-box" data-aos="zoom-in" data-aos-duration="1000">
                     <img src="assets/images/globe.png" alt="image" loading="lazy" width="40" height="40">
                 </div>
-                <h2>Proven Industry Expertise</h2>
+                <span>Proven Industry Expertise</span>
                 <p>Over 50+ years of experience delivering trusted solutions across infrastructure, power, & industrial sectors.</p>
             </div>
             <!-- Card 3 -->
@@ -329,7 +329,7 @@
                 <div class="img-box" data-aos="zoom-in" data-aos-duration="1000">
                     <img src="assets/images/globe.png" alt="image" loading="lazy" width="40" height="40">
                 </div>
-                <h2>Commitment To Quality & Sustainability</h2>
+                <span>Commitment To Quality & Sustainability</span>
                 <p>Strict quality control, certified processes, and eco-conscious practices that meet global standards.</p>
             </div>
             <!-- Card 4 -->
@@ -337,7 +337,7 @@
                 <div class="img-box" data-aos="zoom-in" data-aos-duration="1000">
                     <img src="assets/images/globe.png" alt="image" loading="lazy" width="40" height="40">
                 </div>
-                <h2>Global Reach, Local Strength</h2>
+                <span>Global Reach, Local Strength</span>
                 <p>Supplying to 40+ countries with a strong domestic footprint across 5 Indian states.</p>
             </div>
         </div>
@@ -347,7 +347,7 @@
     <!-- Get in Touch Start -->
     <section class="get-in-touch">
         <div class="get-in-touch-form" data-aos="fade-up" data-aos-duration="1000">
-            <h1>Get In Touch</h1>
+            <h6>Get In Touch</h6>
             <form action="" data-lenis-prevent>
                 <label for="name">Full Name <span>*</span></label>
                 <input type="text" id="name" name="name" required>
@@ -366,16 +366,16 @@
 
     <!-- FAQ Start -->
     <section class="faq">
-        <h1 data-aos="zoom-in" data-aos-duration="1000">Frequently Asked Questions</h1>
+        <h6 data-aos="zoom-in" data-aos-duration="1000">Frequently Asked Questions</h6>
         <p data-aos="fade" data-aos-duration="1000">Got questions? We've covered the essentials here.</p>
 
         <div class="accordion" id="faqAccordion" data-aos="fade" data-aos-duration="1000">
             <div class="accordion-item">
-                <h2 class="accordion-header">
+                <h6 class="accordion-header">
                 <button class="accordion-button" type="button" data-bs-toggle="collapse" data-bs-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
                     What is the minimum order quantity (MOQ) for your products?
                 </button>
-                </h2>
+                </h6>
                 <div id="collapseOne" class="accordion-collapse collapse show" data-bs-parent="#faqAccordion">
                 <div class="accordion-body">
                     The <b>minimum order quantity</b> for the majority of our products is <b>5 tons</b>. However, for our retail segment, there is no MOQ, allowing customers to purchase products directly from our channel partners based on their specific requirements.
@@ -383,11 +383,11 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <h2 class="accordion-header">
+                <h6 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseTwo" aria-expanded="false" aria-controls="collapseTwo">
                     What specific tests are performed during in-process testing and final inspection to ensure consistent mechanical properties for the end product?
                 </button>
-                </h2>
+                </h6>
                 <div id="collapseTwo" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                 <div class="accordion-body">
                     To ensure consistent mechanical properties in our products, we perform several key tests during both in-process testing and final inspection. These include assessing <b>ultimate tensile strength</b>, <b>elongation</b>, and meticulously measuring <b>carbon content</b>.
@@ -395,11 +395,11 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <h2 class="accordion-header">
+                <h6 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
                     What are your typical lead times for delivery?
                 </button>
-                </h2>
+                </h6>
                 <div id="collapseThree" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                 <div class="accordion-body">
                     Our typical lead times for domestic orders range from <b>7 to 10 days</b>, contingent on location and specific product requirements. For international orders, shipments generally take <b>1 to 2 months</b>, varying with destination and product specifications. 
@@ -407,11 +407,11 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <h2 class="accordion-header">
+                <h6 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
                     Do you offer custom diameters, compositions, or packaging for your products to meet specific customer requirements?
                 </button>
-                </h2>
+                </h6>
                 <div id="collapseFour" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                 <div class="accordion-body">
                     Yes, we offer <b>customization options</b> for product diameters, compositions, and packaging. These services are provided based on client needs and the quantity ordered.
@@ -419,11 +419,11 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <h2 class="accordion-header">
+                <h6 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
                     What is your process for addressing quality discrepancies or rejections from customers after delivery?
                 </button>
-                </h2>
+                </h6>
                 <div id="collapseFive" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                 <div class="accordion-body">
                     Our process for addressing quality discrepancies and rejections after delivery is as follows: <br><br>
@@ -433,11 +433,11 @@
                 </div>
             </div>
             <div class="accordion-item">
-                <h2 class="accordion-header">
+                <h6 class="accordion-header">
                 <button class="accordion-button collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
                     How do you ensure the purity of raw materials and prevent impurities from affecting final quality?
                 </button>
-                </h2>
+                </h6>
                 <div id="collapseSix" class="accordion-collapse collapse" data-bs-parent="#faqAccordion">
                 <div class="accordion-body">
                     To guarantee high quality, we source our raw materials exclusively from <b>certified suppliers</b> that meet industry standards. All incoming materials undergo a thorough inspection in our in-house testing laboratories to ensure adherence to these standards. Only materials that satisfy our stringent quality criteria are approved for production.
