--- a/ribbed-wire.html
+++ b/ribbed-wire.html
@@ -347,7 +347,7 @@
     <section class="get-in-touch">
         <div class="get-in-touch-form" data-aos="fade-up" data-aos-duration="1000">
             <h6>Get In Touch</h6>
-            <form action="" data-lenis-prevent>
+            <form action="submit-contact.php" method="POST" data-lenis-prevent onsubmit="showMessage(event)">
                 <label for="name">Full Name <span>*</span></label>
                 <input type="text" id="name" name="name" required>
                 <label for="c-name">Company Name <span>*</span></label>
@@ -355,12 +355,13 @@
                 <label for="email">Email <span>*</span></label>
                 <input type="email" id="email" name="email" required>
                 <label for="phone">Phone No. <span>*</span></label>
-                <input type="tel" id="phone" name="phone" pattern="[0-9]{10}" maxlength="10" required>
-                <button>SUBMIT</button>
+                <input type="tel" id="phone" name="phone_number" pattern="[0-9]{10}" maxlength="10" required>
+                <button type="submit" id="submitBtn">SUBMIT</button>
                 <p>By clicking submit you agree to the Terms & Conditions</p>
+                <div id="formMessage" style="margin-top: 15px; font-weight: bold;"></div>
             </form>
         </div>
-    </section> 
+    </section>
     <!-- Get in Touch End -->
 
     <!-- FAQ Start -->
